fix: removed arrow from language-switcher__dropdown on mobile devices

--- a/frontend/src/components/LanguageSwitcher/LanguageSwitcher.css
+++ b/frontend/src/components/LanguageSwitcher/LanguageSwitcher.css
@@ -16,7 +16,7 @@
 .language-switcher__icon,
 .language-switcher__arrow {
     font-size: 1.5rem;
-    color: #000;
+    color: #111;
 }
 
 .language-switcher__text {
@@ -25,13 +25,15 @@
 
 .language-switcher__dropdown {
     position: absolute;
-    right: 12px;
+    left: 50%;
+    top: calc(100% + 8px);
+    transform: translateX(-50%);
     background-color: #fff;
     border-radius: 24px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    transform: translateX(50%);
+    width: max-content;
     transition: opacity 0.3s ease, transform 0.3s ease;
     z-index: 5;
 }
@@ -42,6 +44,16 @@
     padding: 16px;
     text-align: center;
     cursor: pointer;
+    color: #111;
+}
+
+@media (min-width: 961px) {
+    .language-switcher__dropdown {
+        left: auto;
+        right: 12px;
+        transform: translateX(50%);
+    }
+
 }
 
 
